--- a/src/components/Home/Categories.module.css
+++ b/src/components/Home/Categories.module.css
@@ -9,15 +9,16 @@
 }
 
 .cardProducts {
-    height: auto;
+    padding: 0px;
+    height: 45vh;
     width: 100%;
     margin: 0px;
 }
 
 .imageProducts {
-    object-fit: contain;
-    max-width:100%;
-    max-height:100%;
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .rowProducts {
