--- a/src/components/Home/Products.module.css
+++ b/src/components/Home/Products.module.css
@@ -1,27 +1,27 @@
 .containerProducts {
-    max-width: 85%;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 8em;
+	max-width: 85%;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 8em;
 }
 
 .headerProducts {
-    font-size: 4vh;
-    font-family: Combo;
-    text-align: center;
+	font-size: 4vh;
+	font-family: Combo;
+	text-align: center;
 }
 
 .colProducts {
-    padding: 15px;
+	padding: 15px;
 }
 
 .cardProducts {
-    height: 100%;
-    margin-bottom: '2em';
-    display: 'flex';
-    flex-direction: 'column';
+	height: 100%;
+	margin-bottom: "2em";
+	display: "flex";
+	flex-direction: "column";
 }
 
 .imageCardProducts {
-    height: 300px;
+	height: 300px;
 }
