--- a/src/index.css
+++ b/src/index.css
@@ -1,82 +1,82 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+		"Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
 
 .carousel,
 .item,
 .active {
-    height: 100%;
-    margin-bottom: 60px;
+	height: 100%;
+	margin-bottom: 60px;
 }
 
 .carousel-inner {
-    height: 100%;
+	height: 100%;
 }
 
 .fill {
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+	width: 100%;
+	height: 100%;
+	background-position: center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	-o-background-size: cover;
 }
 
 ::-webkit-scrollbar {
-  width: 0px;
+	width: 0px;
 }
 
 .container {
-  display: flex;
-  overflow-x: scroll;
-  width: 100%;
+	display: flex;
+	overflow-x: scroll;
+	width: 100%;
 }
 
 .card {
-  flex-shrink: 0;
-  width: 300px;
-  height: 200px;
-  border-radius: 10px;
-  margin-left: 10px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  margin-top: 5em;
+	flex-shrink: 0;
+	width: 300px;
+	height: 200px;
+	border-radius: 10px;
+	margin-left: 10px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	margin-top: 5em;
 }
 
 #app {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .swiper {
-  width: 60%;
+	width: 60%;
 }
 
 .swiper-slide {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 18px;
-  font-size: 22px;
-  font-weight: bold;
-  color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 18px;
+	font-size: 22px;
+	font-weight: bold;
+	color: #fff;
 }
 
 .swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 80vh;
+	display: block;
+	width: 100%;
+	height: 80vh;
 }
